# openocd-on-esp32

./: .gitignore  .gitmodules  README.md  sdkconfig.defaults.esp32s3
components/jimtcl/: CMakeLists.txt
main/network/: network_mngr.c
patches/: openocd-esp32-windows-startup-tcl.patch
